Update documentation and default architecture

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_URL=http://coffee-shopping.localhost
 
 # Check https://github.com/docker-library/official-images#architectures-other-than-amd64 for versions
-ARCHITECTURE=i386
+ARCHITECTURE=amd64
 #ARCHITECTURE=arm64v8
 
 LOG_CHANNEL=stack
