Update to Laravel 10
 - update docs
 - simplify setup
 - install PHP stan and Pint

--- a/.env.example
+++ b/.env.example
@@ -2,22 +2,13 @@ APP_NAME="Coffee Shop Sales System"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://coffee-shopping.localhost
-
-# Check https://github.com/docker-library/official-images#architectures-other-than-amd64 for versions
-ARCHITECTURE=amd64
-#ARCHITECTURE=arm64v8
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=db
-DB_PORT=3306
-DB_DATABASE=project
-DB_USERNAME=project
-DB_PASSWORD=secret
+DB_CONNECTION=sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
